alterações na tela inicial

--- a/css/inicial.css
+++ b/css/inicial.css
@@ -29,7 +29,11 @@ body {
 }
 .sidebar .nav-link.active {
     color: black !important;
-    background-color: rgb(255, 255, 32) !important;
+    background-color: #ffff20 !important;
+}
+.nav-link:hover{
+    background-color: #ffff3aa8 !important;
+    color: black !important;
 }
 .block-top, .block-sec{
     padding: 18px;
@@ -94,6 +98,14 @@ h2{
 }
 .block-sec{
     box-shadow: 1px 1px 5px rgb(0, 0, 0);
+}
+.block-sec:hover{
+    background-color: rgb(255, 255, 0);
+    box-shadow: 3px 1px 9px rgb(0, 0, 0);
+}
+.block-top:hover{
+    background-color: rgb(255, 255, 0);
+    box-shadow: 3px 1px 9px rgb(0, 0, 0);
 }
 a{
     text-decoration: none;
